--- a/frontend/lib/l10n/app_en.arb
+++ b/frontend/lib/l10n/app_en.arb
@@ -297,5 +297,105 @@
   "skipNoAllergies": "Skip - No Allergies",
   "homeActiveProjects": "Active projects",
   "homeSeeAll": "See all",
-  "homeDailyPlan": "Your daily plan"
+  "homeDailyPlan": "Your daily plan",
+  "recommendations": "Recommendations",
+  "tryAgain": "Try Again",
+  "goHome": "Go Home",
+  "goBack": "Go Back",
+  "goToHome": "Go to Home",
+  "foodAddedToDietPlan": "added to your diet plan",
+  "failedToAddFood": "Failed to add food to diet plan",
+  "errorMessage": "Error",
+  "nutritionFacts": "Nutrition Facts",
+  "category": "Category",
+  "clearHistory": "Clear History",
+  "clearHistoryConfirm": "Are you sure you want to clear all history? This action cannot be undone.",
+  "clear": "Clear",
+  "historyCleared": "History cleared successfully",
+  "failedToPickImage": "Failed to pick image",
+  "mealTimesSaved": "Meal times saved",
+  "googleSignUpComingSoon": "Google Sign Up coming soon",
+  "googleSignInComingSoon": "Google Sign In coming soon",
+  "failedToLoadHistory": "Failed to load history",
+  "progressTracking": "Progress Tracking",
+  "logProgress": "Log Progress",
+  "addFirstEntry": "Add First Entry",
+  "addEntry": "Add Entry",
+  "progressLoggedSuccess": "Progress logged successfully",
+  "failedToAddEntry": "Failed to add entry",
+  "enterValidScore": "Please enter a valid score (0-100)",
+  "profileSavedSuccess": "Profile saved successfully",
+  "failedToSaveProfile": "Failed to save profile. Check your connection.",
+  "patientProfile": "Patient Profile",
+  "foodRemovedFromPlan": "Food removed from diet plan",
+  "mealReminders": "Meal Reminders",
+  "mealNotifications": "Meal Notifications",
+  "healthTipNotifications": "Health Tips",
+  "reminderNotifications": "Reminders",
+  "heightWeightQuestion": "What's your height and weight?",
+  "heightWeightSubtitle": "This helps us calculate your nutritional needs",
+  "heightLabel": "Height (cm)",
+  "weightLabel": "Weight (kg)",
+  "bmiAlert": "BMI Alert",
+  "yourBMI": "Your BMI",
+  "bmiCategory": "Category",
+  "underweight": "Underweight",
+  "normal": "Normal",
+  "overweight": "Overweight",
+  "obese": "Obese",
+  "underweightMessage": "Your BMI indicates you may be underweight. Our nutrition plan will focus on healthy weight gain and nutrient-dense foods.",
+  "overweightMessage": "Your BMI indicates you may be overweight. Our nutrition plan will be tailored to help you achieve a healthier weight while supporting your treatment.",
+  "iUnderstood": "I Understood",
+  "pleaseEnterValidHeightWeight": "Please enter valid height and weight",
+  "addedAllergies": "Added",
+  "understoodInput": "Understood",
+  "importantNotice": "Important Notice",
+  "nausea": "Nausea",
+  "fatigue": "Fatigue",
+  "lossOfAppetite": "Loss of Appetite",
+  "constipation": "Constipation",
+  "diarrhea": "Diarrhea",
+  "understandSymptoms": "I understand my symptoms will help personalize my plan",
+  "bladderCancer": "Bladder Cancer",
+  "thyroidCancer": "Thyroid Cancer",
+  "skinCancer": "Skin Cancer",
+  "bloodCancer": "Blood Cancer",
+  "otherCancerType": "Other (Type your cancer type)",
+  "enterCancerType": "Enter cancer type...",
+  "vomiting": "Vomiting",
+  "dairy": "Dairy / Lactose",
+  "dairySubtitle": "Milk, cheese, yogurt",
+  "gluten": "Gluten",
+  "glutenSubtitle": "Wheat, barley, rye",
+  "nuts": "Nuts",
+  "nutsSubtitle": "Peanuts, tree nuts",
+  "soy": "Soy",
+  "soySubtitle": "Soybean products",
+  "eggs": "Eggs",
+  "eggsSubtitle": "All egg products",
+  "seafood": "Seafood",
+  "seafoodSubtitle": "Fish, shellfish",
+  "redMeat": "Red Meat",
+  "redMeatSubtitle": "Beef, pork, lamb",
+  "poultry": "Poultry",
+  "poultrySubtitle": "Chicken, turkey",
+  "eatingAbilityQuestion": "How is your eating ability?",
+  "eatingAbilitySubtitle": "This helps us adjust portion sizes and food textures",
+  "normalEating": "Normal",
+  "normalEatingDesc": "Can eat regular foods",
+  "reducedEating": "Reduced",
+  "reducedEatingDesc": "Eating smaller portions",
+  "softFoodsOnly": "Soft Foods Only",
+  "softFoodsOnlyDesc": "Difficulty with solid foods",
+  "liquidsOnly": "Liquids Only",
+  "liquidsOnlyDesc": "Can only consume liquids",
+  "cannotEat": "Cannot Eat",
+  "cannotEatDesc": "Unable to eat or drink",
+  "emergencyNotice": "Important Notice",
+  "cannotEatWarning": "If you cannot eat or drink, please contact your healthcare provider immediately.",
+  "emergencyContacts": "Emergency Contacts:",
+  "nationalHelpline": "National Cancer Helpline: 1800-11-4455",
+  "localER": "Local Emergency: 108",
+  "continueAnyway": "Continue Anyway",
+  "appTitle": "OncoNutri+"
 }
