--- a/frontend/lib/l10n/app_es.arb
+++ b/frontend/lib/l10n/app_es.arb
@@ -93,5 +93,63 @@
   "pleaseTryAgain": "Por favor, inténtalo de nuevo",
   "overviewLabel": "Resumen",
   "healthTipsLabel": "Consejos de Salud",
-  "getPersonalizedRecommendations": "Obtener Recomendaciones Personalizadas"
+  "getPersonalizedRecommendations": "Obtener Recomendaciones Personalizadas",
+  "heightWeightQuestion": "¿Cuál es tu altura y peso?",
+  "height": "Altura",
+  "weight": "Peso",
+  "heightInCm": "Altura (cm)",
+  "weightInKg": "Peso (kg)",
+  "bmiAlert": "Tu BMI",
+  "underweight": "Bajo peso",
+  "normal": "Normal",
+  "overweight": "Sobrepeso",
+  "obese": "Obesidad",
+  "bmiWarningTitle": "Advertencia de BMI",
+  "bmiWarningMessage": "Tu BMI está fuera del rango saludable. Consulta a tu proveedor de atención médica para obtener asesoramiento adecuado.",
+  "bladderCancer": "Cáncer de Vejiga",
+  "thyroidCancer": "Cáncer de Tiroides",
+  "skinCancer": "Cáncer de Piel",
+  "bloodCancer": "Cáncer de Sangre",
+  "understood": "Entendido",
+  "nausea": "Náuseas",
+  "vomiting": "Vómitos",
+  "diarrhea": "Diarrea",
+  "constipation": "Estreñimiento",
+  "fatigue": "Fatiga",
+  "lossOfAppetite": "Pérdida de apetito",
+  "dairy": "Lácteos",
+  "dairySubtitle": "Leche, queso, yogur",
+  "gluten": "Gluten",
+  "glutenSubtitle": "Trigo, cebada, centeno",
+  "nuts": "Frutos secos",
+  "nutsSubtitle": "Cacahuetes, almendras, nueces",
+  "soy": "Soja",
+  "soySubtitle": "Tofu, leche de soja, edamame",
+  "eggs": "Huevos",
+  "eggsSubtitle": "Huevos de gallina, huevos de pato",
+  "seafood": "Mariscos",
+  "seafoodSubtitle": "Pescado, camarones, cangrejo",
+  "redMeat": "Carne roja",
+  "redMeatSubtitle": "Ternera, cerdo, cordero",
+  "poultry": "Aves de corral",
+  "poultrySubtitle": "Pollo, pavo",
+  "eatingAbilityQuestion": "¿Cómo está tu capacidad para comer?",
+  "eatingAbilitySubtitle": "Esto nos ayuda a ajustar los tamaños de las porciones y las texturas de los alimentos",
+  "normalEating": "Normal",
+  "normalEatingDesc": "Puede comer alimentos regulares",
+  "reducedEating": "Reducido",
+  "reducedEatingDesc": "Comiendo porciones más pequeñas",
+  "softFoodsOnly": "Solo alimentos blandos",
+  "softFoodsOnlyDesc": "Dificultad con alimentos sólidos",
+  "liquidsOnly": "Solo líquidos",
+  "liquidsOnlyDesc": "Solo puede consumir líquidos",
+  "cannotEat": "No puede comer",
+  "cannotEatDesc": "Incapaz de comer o beber",
+  "emergencyNotice": "Aviso Importante",
+  "cannotEatWarning": "Si no puede comer o beber, comuníquese con su proveedor de atención médica de inmediato.",
+  "emergencyContacts": "Contactos de emergencia:",
+  "nationalHelpline": "Línea de ayuda nacional contra el cáncer: 1800-11-4455",
+  "localER": "Emergencia local: 108",
+  "continueAnyway": "Continuar de todos modos",
+  "appTitle": "OncoNutri+"
 }
