--- a/frontend/lib/l10n/app_gu.arb
+++ b/frontend/lib/l10n/app_gu.arb
@@ -201,5 +201,63 @@
   "notStarted": "શરૂ થયું નથી",
   "recommendedForYou": "તમારા માટે ભલામણ કરેલ",
   "unableToLoadDashboard": "ડેશબોર્ડ લોડ કરવામાં અસમર્થ",
-  "pleaseTryAgain": "કૃપા કરીને ફરી પ્રયાસ કરો"
+  "pleaseTryAgain": "કૃપા કરીને ફરી પ્રયાસ કરો",
+  "heightWeightQuestion": "તમારી ઉંચાઈ અને વજન શું છે?",
+  "height": "ઉંચાઈ",
+  "weight": "વજન",
+  "heightInCm": "ઉંચાઈ (સે.મી)",
+  "weightInKg": "વજન (કિલો)",
+  "bmiAlert": "તમારી BMI",
+  "underweight": "ઓછું વજન",
+  "normal": "સામાન્ય",
+  "overweight": "વધુ વજન",
+  "obese": "સ્થૂલતા",
+  "bmiWarningTitle": "BMI ચેતવણી",
+  "bmiWarningMessage": "તમારી BMI આરોગ્યપ્રદ શ્રેણીથી બહાર છે. યોગ્ય સલાહ માટે તમારા આરોગ્ય સેવા પ્રદાતાને સંપર્ક કરો.",
+  "bladderCancer": "મૂત્રાશય કેન્સર",
+  "thyroidCancer": "થાયરોઇડ કેન્સર",
+  "skinCancer": "ત્વચા કેન્સર",
+  "bloodCancer": "રક્ત કેન્સર",
+  "understood": "સમજ્યું",
+  "nausea": "મતળી",
+  "vomiting": "ઉલટી",
+  "diarrhea": "ડાયરિયા",
+  "constipation": "કબ્જિયાત",
+  "fatigue": "થકાન",
+  "lossOfAppetite": "ભૂખ ન લાગવી",
+  "dairy": "ડેરી પદાર્થો",
+  "dairySubtitle": "દૂધ, પનીર, દહીં",
+  "gluten": "ગ્લૂટેન",
+  "glutenSubtitle": "ગહું, જવ, રાઇ",
+  "nuts": "ડ્રાય ફ્રૂટ્સ",
+  "nutsSubtitle": "મૂંગફલી, બદામ, અખરોટ",
+  "soy": "સોયા",
+  "soySubtitle": "ટોફુ, સોયા મિલ્ક, એડામામે",
+  "eggs": "અંડા",
+  "eggsSubtitle": "કુકડાના અંડા, બતકના અંડા",
+  "seafood": "સમુદ્રી ભોજન",
+  "seafoodSubtitle": "મછલી, ઝીંગા, કેકડા",
+  "redMeat": "રેડ મીટ",
+  "redMeatSubtitle": "ગોમાંસ, ડુક્કર, મેંડા",
+  "poultry": "પક્ષી માંસ",
+  "poultrySubtitle": "ચિકન, ટર્કી",
+  "eatingAbilityQuestion": "તમારી ખાવાની ક્ષમતા કેવી છે?",
+  "eatingAbilitySubtitle": "આ અમને ભાગના આકાર અને ભોજનની રચના સમાયોજિત કરવામાં મદદ કરે છે",
+  "normalEating": "સામાન્ય",
+  "normalEatingDesc": "નિયમિત ભોજન ખાઈ શકે",
+  "reducedEating": "ઓછું",
+  "reducedEatingDesc": "નાના ભાગ ખાઉ છું",
+  "softFoodsOnly": "ફક્ત નરમ ભોજન",
+  "softFoodsOnlyDesc": "ઘન ભોજન સાથે અડચણ",
+  "liquidsOnly": "ફક્ત દ્રવ",
+  "liquidsOnlyDesc": "ફક્ત દ્રવ લઈ શકે",
+  "cannotEat": "ખાઈ શકતા નથી",
+  "cannotEatDesc": "ખાવું કે પીવું શક્ય નથી",
+  "emergencyNotice": "મહત્વની નોંધ",
+  "cannotEatWarning": "જો તમે ખાઈ કે પી શકતા નથી, તો કૃપા કરીને તુરંત તમારા આરોગ્ય સેવા પ્રદાતાને સંપર્ક કરો.",
+  "emergencyContacts": "એમર્જન્સી સંપર્કો:",
+  "nationalHelpline": "રાષ્ટ્રીય કેન્સર હેલ્પલાઇન: 1800-11-4455",
+  "localER": "સ્થાનિક એમર્જન્સી: 108",
+  "continueAnyway": "જો કે આગળ વધો",
+  "appTitle": "OncoNutri+"
 }
