--- a/frontend/lib/l10n/app_hi.arb
+++ b/frontend/lib/l10n/app_hi.arb
@@ -234,5 +234,105 @@
   "notStarted": "शुरू नहीं हुआ",
   "recommendedForYou": "आपके लिए अनुशंसित",
   "unableToLoadDashboard": "डैशबोर्ड लोड करने में असमर्थ",
-  "pleaseTryAgain": "कृपया पुन: प्रयास करें"
+  "pleaseTryAgain": "कृपया पुन: प्रयास करें",
+  "recommendations": "सिफारिशें",
+  "tryAgain": "पुनः प्रयास करें",
+  "goHome": "होम पर जाएं",
+  "goBack": "वापस जाएं",
+  "goToHome": "होम पर जाएं",
+  "foodAddedToDietPlan": "आहार योजना में जोड़ा गया",
+  "failedToAddFood": "भोजन जोड़ने में विफल",
+  "errorMessage": "त्रुटि",
+  "nutritionFacts": "पोषण तथ्य",
+  "category": "श्रेणी",
+  "clearHistory": "इतिहास साफ़ करें",
+  "clearHistoryConfirm": "क्या आप सुनिश्चित हैं कि आप पूरा इतिहास साफ़ करना चाहते हैं? इस क्रिया को पूर्ववत नहीं किया जा सकता।",
+  "clear": "साफ़ करें",
+  "historyCleared": "इतिहास सफलतापूर्वक साफ़ किया गया",
+  "failedToPickImage": "छवि चुनने में विफल",
+  "mealTimesSaved": "भोजन समय सहेजा गया",
+  "googleSignUpComingSoon": "Google साइन अप जल्द आ रहा है",
+  "googleSignInComingSoon": "Google साइन इन जल्द आ रहा है",
+  "failedToLoadHistory": "इतिहास लोड करने में विफल",
+  "progressTracking": "प्रगति ट्रैकिंग",
+  "logProgress": "प्रगति लॉग करें",
+  "addFirstEntry": "पहली प्रविष्टि जोड़ें",
+  "addEntry": "प्रविष्टि जोड़ें",
+  "progressLoggedSuccess": "प्रगति सफलतापूर्वक लॉग की गई",
+  "failedToAddEntry": "प्रविष्टि जोड़ने में विफल",
+  "enterValidScore": "कृपया एक मान्य स्कोर दर्ज करें (0-100)",
+  "profileSavedSuccess": "प्रोफाइल सफलतापूर्वक सहेजी गई",
+  "failedToSaveProfile": "प्रोफाइल सहेजने में विफल। अपना कनेक्शन जांचें।",
+  "patientProfile": "रोगी प्रोफ़ाइल",
+  "foodRemovedFromPlan": "आहार योजना से भोजन हटाया गया",
+  "mealReminders": "भोजन अनुस्मारक",
+  "mealNotifications": "भोजन सूचनाएं",
+  "healthTipNotifications": "स्वास्थ्य सुझाव",
+  "reminderNotifications": "अनुस्मारक",
+  "heightWeightQuestion": "आपकी ऊंचाई और वजन क्या है?",
+  "heightWeightSubtitle": "यह हमें आपकी पोषण संबंधी आवश्यकताओं की गणना करने में मदद करता है",
+  "heightLabel": "ऊंचाई (सेमी)",
+  "weightLabel": "वजन (किग्रा)",
+  "bmiAlert": "BMI अलर्ट",
+  "yourBMI": "आपका BMI",
+  "bmiCategory": "श्रेणी",
+  "underweight": "कम वजन",
+  "normal": "सामान्य",
+  "overweight": "अधिक वजन",
+  "obese": "मोटापा",
+  "underweightMessage": "आपका BMI इंगित करता है कि आपका वजन कम हो सकता है। हमारी पोषण योजना स्वस्थ वजन बढ़ाने और पोषक तत्वों से भरपूर खाद्य पदार्थों पर ध्यान केंद्रित करेगी।",
+  "overweightMessage": "आपका BMI इंगित करता है कि आपका वजन अधिक हो सकता है। हमारी पोषण योजना आपके उपचार का समर्थन करते हुए स्वस्थ वजन प्राप्त करने में मदद करने के लिए तैयार की जाएगी।",
+  "iUnderstood": "मैं समझ गया",
+  "pleaseEnterValidHeightWeight": "कृपया मान्य ऊंचाई और वजन दर्ज करें",
+  "addedAllergies": "जोड़ा गया",
+  "understoodInput": "समझ गया",
+  "importantNotice": "महत्वपूर्ण सूचना",
+  "nausea": "मतली",
+  "fatigue": "थकान",
+  "lossOfAppetite": "भूख न लगना",
+  "constipation": "कब्ज",
+  "diarrhea": "दस्त",
+  "understandSymptoms": "मैं समझता हूं कि मेरे लक्षण मेरी योजना को व्यक्तिगत बनाने में मदद करेंगे",
+  "bladderCancer": "मूत्राशय कैंसर",
+  "thyroidCancer": "थायराइड कैंसर",
+  "skinCancer": "त्वचा कैंसर",
+  "bloodCancer": "रक्त कैंसर",
+  "otherCancerType": "अन्य (अपना कैंसर प्रकार टाइप करें)",
+  "enterCancerType": "कैंसर प्रकार दर्ज करें...",
+  "vomiting": "उल्टी",
+  "dairy": "डेयरी / लैक्टोज",
+  "dairySubtitle": "दूध, पनीर, दही",
+  "gluten": "ग्लूटेन",
+  "glutenSubtitle": "गेहूं, जौ, राई",
+  "nuts": "मेवे",
+  "nutsSubtitle": "मूंगफली, ट्री नट्स",
+  "soy": "सोया",
+  "soySubtitle": "सोयाबीन उत्पाद",
+  "eggs": "अंडे",
+  "eggsSubtitle": "सभी अंडा उत्पाद",
+  "seafood": "समुद्री भोजन",
+  "seafoodSubtitle": "मछली, शेलफिश",
+  "redMeat": "लाल मांस",
+  "redMeatSubtitle": "बीफ, पोर्क, लैम्ब",
+  "poultry": "मुर्गी",
+  "poultrySubtitle": "चिकन, टर्की",
+  "eatingAbilityQuestion": "आपकी खाने की क्षमता कैसी है?",
+  "eatingAbilitySubtitle": "यह हमें भाग के आकार और खाद्य बनावट को समायोजित करने में मदद करता है",
+  "normalEating": "सामान्य",
+  "normalEatingDesc": "नियमित भोजन खा सकते हैं",
+  "reducedEating": "कम",
+  "reducedEatingDesc": "छोटे भाग खा रहे हैं",
+  "softFoodsOnly": "केवल नरम भोजन",
+  "softFoodsOnlyDesc": "ठोस भोजन में कठिनाई",
+  "liquidsOnly": "केवल तरल पदार्थ",
+  "liquidsOnlyDesc": "केवल तरल पदार्थ ले सकते हैं",
+  "cannotEat": "नहीं खा सकते",
+  "cannotEatDesc": "खाने या पीने में असमर्थ",
+  "emergencyNotice": "महत्वपूर्ण सूचना",
+  "cannotEatWarning": "यदि आप खा या पी नहीं सकते हैं, तो कृपया तुरंत अपने स्वास्थ्य सेवा प्रदाता से संपर्क करें।",
+  "emergencyContacts": "आपातकालीन संपर्क:",
+  "nationalHelpline": "राष्ट्रीय कैंसर हेल्पलाइन: 1800-11-4455",
+  "localER": "स्थानीय आपातकालीन: 108",
+  "continueAnyway": "फिर भी जारी रखें",
+  "appTitle": "OncoNutri+"
 }
