--- a/frontend/lib/l10n/app_kn.arb
+++ b/frontend/lib/l10n/app_kn.arb
@@ -201,5 +201,105 @@
   "notStarted": "ಪ್ರಾರಂಭವಾಗಿಲ್ಲ",
   "recommendedForYou": "ನಿಮಗಾಗಿ ಶಿಫಾರಸು ಮಾಡಲಾಗಿದೆ",
   "unableToLoadDashboard": "ಡ್ಯಾಶ್‌ಬೋರ್ಡ್ ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಿಲ್ಲ",
-  "pleaseTryAgain": "ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ"
+  "pleaseTryAgain": "ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
+  "recommendations": "ಶಿಫಾರಸುಗಳು",
+  "tryAgain": "ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
+  "goHome": "ಮನೆಗೆ ಹೋಗಿ",
+  "goBack": "ಹಿಂದಕ್ಕೆ ಹೋಗಿ",
+  "goToHome": "ಮನೆಗೆ ಹೋಗಿ",
+  "foodAddedToDietPlan": "ಆಹಾರ ಯೋಜನೆಗೆ ಸೇರಿಸಲಾಗಿದೆ",
+  "failedToAddFood": "ಆಹಾರ ಸೇರಿಸುವಲ್ಲಿ ವಿಫಲವಾಗಿದೆ",
+  "errorMessage": "ದೋಷ",
+  "nutritionFacts": "ಪೋಷಣೆ ವಿವರಗಳು",
+  "category": "ವರ್ಗ",
+  "clearHistory": "ಇತಿಹಾಸವನ್ನು ತೆರವುಗೊಳಿಸಿ",
+  "clearHistoryConfirm": "ನೀವು ಎಲ್ಲಾ ಇತಿಹಾಸವನ್ನು ತೆರವುಗೊಳಿಸಲು ಖಚಿತವಾಗಿ ಬಯಸುವಿರಾ? ಈ ಕ್ರಿಯೆಯನ್ನು ರದ್ದುಗೊಳಿಸಲಾಗುವುದಿಲ್ಲ.",
+  "clear": "ತೆರವುಗೊಳಿಸಿ",
+  "historyCleared": "ಇತಿಹಾಸವನ್ನು ಯಶಸ್ವಿಯಾಗಿ ತೆರವುಗೊಳಿಸಲಾಗಿದೆ",
+  "failedToPickImage": "ಚಿತ್ರವನ್ನು ಆಯ್ಕೆಮಾಡುವಲ್ಲಿ ವಿಫಲವಾಗಿದೆ",
+  "mealTimesSaved": "ಊಟದ ಸಮಯವನ್ನು ಉಳಿಸಲಾಗಿದೆ",
+  "googleSignUpComingSoon": "Google ಸೈನ್ ಅಪ್ ಶೀಘ್ರದಲ್ಲೇ ಬರಲಿದೆ",
+  "googleSignInComingSoon": "Google ಸೈನ್ ಇನ್ ಶೀಘ್ರದಲ್ಲೇ ಬರಲಿದೆ",
+  "failedToLoadHistory": "ಇತಿಹಾಸವನ್ನು ಲೋಡ್ ಮಾಡುವಲ್ಲಿ ವಿಫಲವಾಗಿದೆ",
+  "progressTracking": "ಪ್ರಗತಿ ಟ್ರ್ಯಾಕಿಂಗ್",
+  "logProgress": "ಪ್ರಗತಿಯನ್ನು ಲಾಗ್ ಮಾಡಿ",
+  "addFirstEntry": "ಮೊದಲ ನಮೂದು ಸೇರಿಸಿ",
+  "addEntry": "ನಮೂದು ಸೇರಿಸಿ",
+  "progressLoggedSuccess": "ಪ್ರಗತಿಯನ್ನು ಯಶಸ್ವಿಯಾಗಿ ಲಾಗ್ ಮಾಡಲಾಗಿದೆ",
+  "failedToAddEntry": "ನಮೂದು ಸೇರಿಸುವಲ್ಲಿ ವಿಫಲವಾಗಿದೆ",
+  "enterValidScore": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಅಂಕವನ್ನು ನಮೂದಿಸಿ (0-100)",
+  "profileSavedSuccess": "ಪ್ರೊಫೈಲ್ ಅನ್ನು ಯಶಸ್ವಿಯಾಗಿ ಉಳಿಸಲಾಗಿದೆ",
+  "failedToSaveProfile": "ಪ್ರೊಫೈಲ್ ಉಳಿಸುವಲ್ಲಿ ವಿಫಲವಾಗಿದೆ. ನಿಮ್ಮ ಸಂಪರ್ಕವನ್ನು ಪರಿಶೀಲಿಸಿ.",
+  "patientProfile": "ರೋಗಿ ಪ್ರೊಫೈಲ್",
+  "foodRemovedFromPlan": "ಆಹಾರ ಯೋಜನೆಯಿಂದ ತೆಗೆದುಹಾಕಲಾಗಿದೆ",
+  "mealReminders": "ಊಟದ ಜ್ಞಾಪನೆಗಳು",
+  "mealNotifications": "ಊಟದ ಅಧಿಸೂಚನೆಗಳು",
+  "healthTipNotifications": "ಆರೋಗ್ಯ ಸಲಹೆಗಳು",
+  "reminderNotifications": "ಜ್ಞಾಪನೆಗಳು",
+  "heightWeightQuestion": "ನಿಮ್ಮ ಎತ್ತರ ಮತ್ತು ತೂಕ ಎಷ್ಟು?",
+  "heightWeightSubtitle": "ಇದು ನಿಮ್ಮ ಪೋಷಣೆಯ ಅಗತ್ಯಗಳನ್ನು ಲೆಕ್ಕಾಚಾರ ಮಾಡಲು ಸಹಾಯ ಮಾಡುತ್ತದೆ",
+  "heightLabel": "ಎತ್ತರ (ಸೆಮೀ)",
+  "weightLabel": "ತೂಕ (ಕೆಜಿ)",
+  "bmiAlert": "BMI ಎಚ್ಚರಿಕೆ",
+  "yourBMI": "ನಿಮ್ಮ BMI",
+  "bmiCategory": "ವರ್ಗ",
+  "underweight": "ಕಡಿಮೆ ತೂಕ",
+  "normal": "ಸಾಮಾನ್ಯ",
+  "overweight": "ಹೆಚ್ಚು ತೂಕ",
+  "obese": "ಬೊಜ್ಜು",
+  "underweightMessage": "ನಿಮ್ಮ BMI ನೀವು ಕಡಿಮೆ ತೂಕವನ್ನು ಹೊಂದಿರಬಹುದು ಎಂದು ಸೂಚಿಸುತ್ತದೆ. ನಮ್ಮ ಪೋಷಣೆ ಯೋಜನೆ ಆರೋಗ್ಯಕರ ತೂಕ ಹೆಚ್ಚಳ ಮತ್ತು ಪೋಷಕಾಂಶ-ದಟ್ಟವಾದ ಆಹಾರಗಳ ಮೇಲೆ ಕೇಂದ್ರೀಕರಿಸುತ್ತದೆ.",
+  "overweightMessage": "ನಿಮ್ಮ BMI ನೀವು ಹೆಚ್ಚು ತೂಕವನ್ನು ಹೊಂದಿರಬಹುದು ಎಂದು ಸೂಚಿಸುತ್ತದೆ. ನಿಮ್ಮ ಚಿಕಿತ್ಸೆಯನ್ನು ಬೆಂಬಲಿಸುವಾಗ ಆರೋಗ್ಯಕರ ತೂಕವನ್ನು ಸಾಧಿಸಲು ನಮ್ಮ ಪೋಷಣೆ ಯೋಜನೆ ವಿನ್ಯಾಸಗೊಳಿಸಲಾಗುತ್ತದೆ.",
+  "iUnderstood": "ನಾನು ಅರ್ಥಮಾಡಿಕೊಂಡೆ",
+  "pleaseEnterValidHeightWeight": "ದಯವಿಟ್ಟು ಮಾನ್ಯ ಎತ್ತರ ಮತ್ತು ತೂಕವನ್ನು ನಮೂದಿಸಿ",
+  "addedAllergies": "ಸೇರಿಸಲಾಗಿದೆ",
+  "understoodInput": "ಅರ್ಥಮಾಡಿಕೊಂಡೆ",
+  "importantNotice": "ಪ್ರಮುಖ ಸೂಚನೆ",
+  "nausea": "ವಾಕರಿಕೆ",
+  "fatigue": "ಆಯಾಸ",
+  "lossOfAppetite": "ಹಸಿವು ಕಡಿಮೆ",
+  "constipation": "ಮಲಬದ್ಧತೆ",
+  "diarrhea": "ಅತಿಸಾರ",
+  "understandSymptoms": "ನನ್ನ ಲಕ್ಷಣಗಳು ನನ್ನ ಯೋಜನೆಯನ್ನು ವೈಯಕ್ತೀಕರಿಸಲು ಸಹಾಯ ಮಾಡುತ್ತವೆ ಎಂದು ನಾನು ಅರ್ಥಮಾಡಿಕೊಂಡಿದ್ದೇನೆ",
+  "bladderCancer": "ಮೂತ್ರಕೋಶ ಕ್ಯಾನ್ಸರ್",
+  "thyroidCancer": "ಥೈರಾಯ್ಡ್ ಕ್ಯಾನ್ಸರ್",
+  "skinCancer": "ಚರ್ಮ ಕ್ಯಾನ್ಸರ್",
+  "bloodCancer": "ರಕ್ತ ಕ್ಯಾನ್ಸರ್",
+  "otherCancerType": "ಇತರೆ (ನಿಮ್ಮ ಕ್ಯಾನ್ಸರ್ ಪ್ರಕಾರವನ್ನು ಟೈಪ್ ಮಾಡಿ)",
+  "enterCancerType": "ಕ್ಯಾನ್ಸರ್ ಪ್ರಕಾರವನ್ನು ನಮೂದಿಸಿ...",
+  "vomiting": "ವಾಂತಿ",
+  "dairy": "ಡೈರಿ / ಲ್ಯಾಕ್ಟೋಸ್",
+  "dairySubtitle": "ಹಾಲು, ಚೀಸ್, ಮೊಸರು",
+  "gluten": "ಗ್ಲುಟನ್",
+  "glutenSubtitle": "ಗೋಧಿ, ಬಾರ್ಲಿ, ರೈ",
+  "nuts": "ಬೀಜಗಳು",
+  "nutsSubtitle": "ಕಡಲೆ, ಟ್ರೀ ನಟ್ಸ್",
+  "soy": "ಸೋಯಾ",
+  "soySubtitle": "ಸೋಯಾಬೀನ್ ಉತ್ಪನ್ನಗಳು",
+  "eggs": "ಮೊಟ್ಟೆಗಳು",
+  "eggsSubtitle": "ಎಲ್ಲಾ ಮೊಟ್ಟೆ ಉತ್ಪನ್ನಗಳು",
+  "seafood": "ಸಮುದ್ರಾಹಾರ",
+  "seafoodSubtitle": "ಮೀನು, ಶೆಲ್‌ಫಿಶ್",
+  "redMeat": "ಕೆಂಪು ಮಾಂಸ",
+  "redMeatSubtitle": "ದನದ ಮಾಂಸ, ಹಂದಿಮಾಂಸ, ಕುರಿಮಾಂಸ",
+  "poultry": "ಕೋಳಿ",
+  "poultrySubtitle": "ಚಿಕನ್, ಟರ್ಕಿ",
+  "eatingAbilityQuestion": "ನಿಮ್ಮ ತಿನ್ನುವ ಸಾಮರ್ಥ್ಯ ಹೇಗಿದೆ?",
+  "eatingAbilitySubtitle": "ಭಾಗದ ಗಾತ್ರಗಳು ಮತ್ತು ಆಹಾರ ವಿನ್ಯಾಸವನ್ನು ಸರಿಹೊಂದಿಸಲು ಇದು ನಮಗೆ ಸಹಾಯ ಮಾಡುತ್ತದೆ",
+  "normalEating": "ಸಾಮಾನ್ಯ",
+  "normalEatingDesc": "ನಿಯಮಿತ ಆಹಾರವನ್ನು ತಿನ್ನಬಹುದು",
+  "reducedEating": "ಕಡಿಮೆ",
+  "reducedEatingDesc": "ಸಣ್ಣ ಭಾಗಗಳನ್ನು ತಿನ್ನುತ್ತಿದ್ದಾರೆ",
+  "softFoodsOnly": "ಮೃದುವಾದ ಆಹಾರಗಳು ಮಾತ್ರ",
+  "softFoodsOnlyDesc": "ಘನ ಆಹಾರಗಳೊಂದಿಗೆ ತೊಂದರೆ",
+  "liquidsOnly": "ದ್ರವಗಳು ಮಾತ್ರ",
+  "liquidsOnlyDesc": "ದ್ರವಗಳನ್ನು ಮಾತ್ರ ಸೇವಿಸಬಹುದು",
+  "cannotEat": "ತಿನ್ನಲು ಸಾಧ್ಯವಿಲ್ಲ",
+  "cannotEatDesc": "ತಿನ್ನಲು ಅಥವಾ ಕುಡಿಯಲು ಸಾಧ್ಯವಿಲ್ಲ",
+  "emergencyNotice": "ಮುಖ್ಯ ಸೂಚನೆ",
+  "cannotEatWarning": "ನೀವು ತಿನ್ನಲು ಅಥವಾ ಕುಡಿಯಲು ಸಾಧ್ಯವಾಗದಿದ್ದರೆ, ದಯವಿಟ್ಟು ತಕ್ಷಣ ನಿಮ್ಮ ಆರೋಗ್ಯ ಸೇವಾ ಪೂರೈಕೆದಾರರನ್ನು ಸಂಪರ್ಕಿಸಿ.",
+  "emergencyContacts": "ತುರ್ತು ಸಂಪರ್ಕಗಳು:",
+  "nationalHelpline": "ರಾಷ್ಟ್ರೀಯ ಕ್ಯಾನ್ಸರ್ ಹೆಲ್ಪ್‌ಲೈನ್: 1800-11-4455",
+  "localER": "ಸ್ಥಳೀಯ ತುರ್ತು: 108",
+  "continueAnyway": "ಹೇಗಾದರೂ ಮುಂದುವರಿಸಿ",
+  "appTitle": "OncoNutri+"
 }
