--- a/frontend/lib/l10n/app_ml.arb
+++ b/frontend/lib/l10n/app_ml.arb
@@ -201,5 +201,63 @@
   "notStarted": "ആരംഭിച്ചിട്ടില്ല",
   "recommendedForYou": "നിങ്ങൾക്കായി ശുപാർശ ചെയ്യുന്നു",
   "unableToLoadDashboard": "ഡാഷ്ബോർഡ് ലോഡ് ചെയ്യാൻ കഴിയുന്നില്ല",
-  "pleaseTryAgain": "ദയവായി വീണ്ടും ശ്രമിക്കുക"
+  "pleaseTryAgain": "ദയവായി വീണ്ടും ശ്രമിക്കുക",
+  "heightWeightQuestion": "നിങ്ങളുടെ ഉയരവും ഭാരവും എന്താണ്?",
+  "height": "ഉയരം",
+  "weight": "ഭാരം",
+  "heightInCm": "ഉയരം (സെ.മീ)",
+  "weightInKg": "ഭാരം (കി.ഗ്രാം)",
+  "bmiAlert": "നിങ്ങളുടെ BMI",
+  "underweight": "കുറഞ്ഞ ഭാരം",
+  "normal": "സാധാരണം",
+  "overweight": "അമിത ഭാരം",
+  "obese": "പൊണ്ണത്തടി",
+  "bmiWarningTitle": "BMI മുന്നറിയിപ്പ്",
+  "bmiWarningMessage": "നിങ്ങളുടെ BMI ആരോഗ്യകരമായ പരിധിയിൽ നിന്ന് പുറത്താണ്. ശരിയായ ഉപദേശത്തിന് നിങ്ങളുടെ ആരോഗ്യ സേവന ദാതാവിനെ സമീപിക്കുക.",
+  "bladderCancer": "മൂത്രാശയ കാൻസർ",
+  "thyroidCancer": "തൈറോയ്ഡ് കാൻസർ",
+  "skinCancer": "ചർമ്മ കാൻസർ",
+  "bloodCancer": "രക്ത കാൻസർ",
+  "understood": "മനസ്സിലായി",
+  "nausea": "ഓക്കാനം",
+  "vomiting": "ഛർദ്ദി",
+  "diarrhea": "വയറിളക്കം",
+  "constipation": "മലബന്ധം",
+  "fatigue": "ക്ഷീണം",
+  "lossOfAppetite": "വിശപ്പില്ലായ്മ",
+  "dairy": "പാലുൽപ്പന്നങ്ങൾ",
+  "dairySubtitle": "പാൽ, ചീസ്, തൈര്",
+  "gluten": "ഗ്ലൂറ്റൻ",
+  "glutenSubtitle": "ഗോതമ്പ്, ബാർലി, റൈ",
+  "nuts": "പരിപ്പുകൾ",
+  "nutsSubtitle": "നിലക്കടല, ബദാം, വാൾനട്ട്",
+  "soy": "സോയ",
+  "soySubtitle": "ടോഫു, സോയ മിൽക്ക്, എഡമാമെ",
+  "eggs": "മുട്ടകൾ",
+  "eggsSubtitle": "കോഴി മുട്ട, താറാവ് മുട്ട",
+  "seafood": "സമുദ്രഭക്ഷണം",
+  "seafoodSubtitle": "മത്സ്യം, കൊഞ്ച്, ഞണ്ട്",
+  "redMeat": "ചുവന്ന മാംസം",
+  "redMeatSubtitle": "ബീഫ്, പോർക്ക്, ആട്ടിറച്ചി",
+  "poultry": "കോഴി മാംസം",
+  "poultrySubtitle": "ചിക്കൻ, ടർക്കി",
+  "eatingAbilityQuestion": "നിങ്ങളുടെ ഭക്ഷണ കഴിക്കാനുള്ള കഴിവ് എങ്ങനെയാണ്?",
+  "eatingAbilitySubtitle": "ഭാഗ വലുപ്പങ്ങളും ഭക്ഷണ ഘടനകളും ക്രമീകരിക്കാൻ ഇത് ഞങ്ങളെ സഹായിക്കുന്നു",
+  "normalEating": "സാധാരണം",
+  "normalEatingDesc": "സാധാരണ ഭക്ഷണങ്ങൾ കഴിക്കാം",
+  "reducedEating": "കുറഞ്ഞത്",
+  "reducedEatingDesc": "ചെറിയ ഭാഗങ്ങൾ കഴിക്കുന്നു",
+  "softFoodsOnly": "മൃദുവായ ഭക്ഷണങ്ങൾ മാത്രം",
+  "softFoodsOnlyDesc": "ഖര ഭക്ഷണങ്ങളിൽ ബുദ്ധിമുട്ട്",
+  "liquidsOnly": "ദ്രാവകങ്ങൾ മാത്രം",
+  "liquidsOnlyDesc": "ദ്രാവകങ്ങൾ മാത്രമേ കഴിക്കാൻ കഴിയൂ",
+  "cannotEat": "കഴിക്കാൻ കഴിയില്ല",
+  "cannotEatDesc": "കഴിക്കാനോ കുടിക്കാനോ കഴിയില്ല",
+  "emergencyNotice": "പ്രധാന അറിയിപ്പ്",
+  "cannotEatWarning": "നിങ്ങൾക്ക് കഴിക്കാനോ കുടിക്കാനോ കഴിയുന്നില്ലെങ്കിൽ, ദയവായി ഉടൻ നിങ്ങളുടെ ആരോഗ്യ സേവന ദാതാവിനെ ബന്ധപ്പെടുക.",
+  "emergencyContacts": "അടിയന്തര ബന്ധങ്ങൾ:",
+  "nationalHelpline": "ദേശീയ കാൻസർ ഹെൽപ്പ്‌ലൈൻ: 1800-11-4455",
+  "localER": "പ്രാദേശിക അടിയന്തിരം: 108",
+  "continueAnyway": "എന്തായാലും തുടരുക",
+  "appTitle": "OncoNutri+"
 }
