--- a/frontend/lib/l10n/app_mr.arb
+++ b/frontend/lib/l10n/app_mr.arb
@@ -201,5 +201,63 @@
   "notStarted": "सुरू केलेले नाही",
   "recommendedForYou": "तुमच्यासाठी शिफारसी",
   "unableToLoadDashboard": "डॅशबोर्ड लोड करण्यात अक्षम",
-  "pleaseTryAgain": "कृपया पुन्हा प्रयत्न करा"
+  "pleaseTryAgain": "कृपया पुन्हा प्रयत्न करा",
+  "heightWeightQuestion": "तुमची उंची आणि वजन काय आहे?",
+  "height": "उंची",
+  "weight": "वजन",
+  "heightInCm": "उंची (सेमी)",
+  "weightInKg": "वजन (किलो)",
+  "bmiAlert": "तुमचा BMI",
+  "underweight": "कमी वजन",
+  "normal": "सामान्य",
+  "overweight": "जादा वजन",
+  "obese": "लठ्ठपणा",
+  "bmiWarningTitle": "BMI इशारा",
+  "bmiWarningMessage": "तुमचा BMI आरोग्यदायी श्रेणीच्या बाहेर आहे. योग्य सल्ल्यासाठी तुमच्या आरोग्य सेवा प्रदात्याशी संपर्क साधा.",
+  "bladderCancer": "मूत्राशय कर्करोग",
+  "thyroidCancer": "थायरॉईड कर्करोग",
+  "skinCancer": "त्वचा कर्करोग",
+  "bloodCancer": "रक्त कर्करोग",
+  "understood": "समजले",
+  "nausea": "मळमळ",
+  "vomiting": "उलट्या",
+  "diarrhea": "अतिसार",
+  "constipation": "बद्धकोष्ठता",
+  "fatigue": "थकवा",
+  "lossOfAppetite": "भूक न लागणे",
+  "dairy": "दुग्धजन्य पदार्थ",
+  "dairySubtitle": "दूध, चीज, दही",
+  "gluten": "ग्लूटेन",
+  "glutenSubtitle": "गहू, बार्ली, राई",
+  "nuts": "काजू",
+  "nutsSubtitle": "शेंगदाणे, बदाम, अक्रोड",
+  "soy": "सोया",
+  "soySubtitle": "टोफू, सोया दूध, एडामे",
+  "eggs": "अंडी",
+  "eggsSubtitle": "कोंबडीची अंडी, बदकाची अंडी",
+  "seafood": "सीफूड",
+  "seafoodSubtitle": "मासा, कोळंबी, खेकडा",
+  "redMeat": "लाल मांस",
+  "redMeatSubtitle": "गोमांस, डुकराचे मांस, कोकरू",
+  "poultry": "कोंबडी",
+  "poultrySubtitle": "चिकन, टर्की",
+  "eatingAbilityQuestion": "तुमची खाण्याची क्षमता कशी आहे?",
+  "eatingAbilitySubtitle": "हे आम्हाला भाग आकार आणि अन्न पोत समायोजित करण्यास मदत करते",
+  "normalEating": "सामान्य",
+  "normalEatingDesc": "नियमित अन्न खाऊ शकतो",
+  "reducedEating": "कमी",
+  "reducedEatingDesc": "लहान भाग खात आहे",
+  "softFoodsOnly": "फक्त मऊ अन्न",
+  "softFoodsOnlyDesc": "घन पदार्थांसह अडचण",
+  "liquidsOnly": "फक्त द्रव",
+  "liquidsOnlyDesc": "फक्त द्रव घेऊ शकतो",
+  "cannotEat": "खाऊ शकत नाही",
+  "cannotEatDesc": "खाणे किंवा पिणे शक्य नाही",
+  "emergencyNotice": "महत्त्वाची सूचना",
+  "cannotEatWarning": "तुम्ही खाऊ किंवा पिऊ शकत नसल्यास, कृपया ताबडतोब तुमच्या आरोग्य सेवा प्रदात्याशी संपर्क साधा.",
+  "emergencyContacts": "आपत्कालीन संपर्क:",
+  "nationalHelpline": "राष्ट्रीय कर्करोग हेल्पलाइन: 1800-11-4455",
+  "localER": "स्थानिक आपत्कालीन: 108",
+  "continueAnyway": "तरीही सुरू ठेवा",
+  "appTitle": "OncoNutri+"
 }
