--- a/frontend/lib/l10n/app_pa.arb
+++ b/frontend/lib/l10n/app_pa.arb
@@ -201,5 +201,63 @@
   "notStarted": "ਸ਼ੁਰੂ ਨਹੀਂ ਹੋਇਆ",
   "recommendedForYou": "ਤੁਹਾਡੇ ਲਈ ਸਿਫਾਰਸ਼ਿਤ",
   "unableToLoadDashboard": "ਡੈਸ਼ਬੋਰਡ ਲੋਡ ਕਰਨ ਵਿੱਚ ਅਸਮਰੱਥ",
-  "pleaseTryAgain": "ਕਿਰਪਾ ਕਰਕੇ ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ"
+  "pleaseTryAgain": "ਕਿਰਪਾ ਕਰਕੇ ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ",
+  "heightWeightQuestion": "ਤੁਹਾਡੀ ਉਚਾਈ ਅਤੇ ਭਾਰ ਕਿੰਨਾ ਹੈ?",
+  "height": "ਉਚਾਈ",
+  "weight": "ਭਾਰ",
+  "heightInCm": "ਉਚਾਈ (ਸੈ.ਮੀ)",
+  "weightInKg": "ਭਾਰ (ਕਿਲੋ)",
+  "bmiAlert": "ਤੁਹਾਡਾ BMI",
+  "underweight": "ਘੱਟ ਭਾਰ",
+  "normal": "ਸਧਾਰਨ",
+  "overweight": "ਵੱਧ ਭਾਰ",
+  "obese": "ਮੋਟਾਪਾ",
+  "bmiWarningTitle": "BMI ਚੇਤਾਵਨੀ",
+  "bmiWarningMessage": "ਤੁਹਾਡਾ BMI ਸਿਹਤਮੰਦ ਰੇਂਜ ਤੋਂ ਬਾਹਰ ਹੈ। ਸਹੀ ਸਲਾਹ ਲਈ ਆਪਣੇ ਸਿਹਤ ਸੇਵਾ ਪ੍ਰਦਾਤਾ ਨਾਲ ਸੰਪਰਕ ਕਰੋ।",
+  "bladderCancer": "ਬਲੈਡਰ ਕੈਂਸਰ",
+  "thyroidCancer": "ਥਾਇਰਾਇਡ ਕੈਂਸਰ",
+  "skinCancer": "ਚਮੜੀ ਕੈਂਸਰ",
+  "bloodCancer": "ਖੂਨ ਕੈਂਸਰ",
+  "understood": "ਸਮਝ ਗਏ",
+  "nausea": "ਜੀ ਮਿਚਲਾਉਣਾ",
+  "vomiting": "ਉਲਟੀਆਂ",
+  "diarrhea": "ਦਸਤ",
+  "constipation": "ਕਬਜ਼",
+  "fatigue": "ਥਕਾਵਟ",
+  "lossOfAppetite": "ਭੁੱਖ ਦੀ ਘਾਟ",
+  "dairy": "ਡੇਅਰੀ",
+  "dairySubtitle": "ਦੁੱਧ, ਪਨੀਰ, ਦਹੀਂ",
+  "gluten": "ਗਲੂਟਨ",
+  "glutenSubtitle": "ਕਣਕ, ਜੌਂ, ਰਾਈ",
+  "nuts": "ਮੇਵੇ",
+  "nutsSubtitle": "ਮੂੰਗਫਲੀ, ਬਦਾਮ, ਅਖਰੋਟ",
+  "soy": "ਸੋਇਆ",
+  "soySubtitle": "ਟੋਫੂ, ਸੋਇਆ ਦੁੱਧ, ਏਡਾਮਾਮੇ",
+  "eggs": "ਅੰਡੇ",
+  "eggsSubtitle": "ਮੁਰਗੀ ਦੇ ਅੰਡੇ, ਬੱਤਖ ਦੇ ਅੰਡੇ",
+  "seafood": "ਸਮੁੰਦਰੀ ਭੋਜਨ",
+  "seafoodSubtitle": "ਮੱਛੀ, ਝੀਂਗਾ, ਕੇਕੜਾ",
+  "redMeat": "ਲਾਲ ਮੀਟ",
+  "redMeatSubtitle": "ਬੀਫ, ਪੋਰਕ, ਲੈਂਬ",
+  "poultry": "ਪੰਛੀ ਮੀਟ",
+  "poultrySubtitle": "ਚਿਕਨ, ਟਰਕੀ",
+  "eatingAbilityQuestion": "ਤੁਹਾਡੀ ਖਾਣ ਦੀ ਸਮਰੱਥਾ ਕਿਵੇਂ ਹੈ?",
+  "eatingAbilitySubtitle": "ਇਹ ਸਾਨੂੰ ਹਿੱਸੇ ਦੇ ਆਕਾਰ ਅਤੇ ਭੋਜਨ ਦੀ ਬਣਤਰ ਨੂੰ ਅਨੁਕੂਲਿਤ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕਰਦਾ ਹੈ",
+  "normalEating": "ਸਧਾਰਨ",
+  "normalEatingDesc": "ਨਿਯਮਤ ਭੋਜਨ ਖਾ ਸਕਦੇ ਹੋ",
+  "reducedEating": "ਘੱਟ",
+  "reducedEatingDesc": "ਛੋਟੇ ਹਿੱਸੇ ਖਾ ਰਹੇ ਹੋ",
+  "softFoodsOnly": "ਸਿਰਫ਼ ਨਰਮ ਭੋਜਨ",
+  "softFoodsOnlyDesc": "ਠੋਸ ਭੋਜਨ ਨਾਲ ਮੁਸ਼ਕਲ",
+  "liquidsOnly": "ਸਿਰਫ਼ ਤਰਲ",
+  "liquidsOnlyDesc": "ਸਿਰਫ਼ ਤਰਲ ਲੈ ਸਕਦੇ ਹੋ",
+  "cannotEat": "ਖਾ ਨਹੀਂ ਸਕਦੇ",
+  "cannotEatDesc": "ਖਾਣ ਜਾਂ ਪੀਣ ਵਿੱਚ ਅਸਮਰੱਥ",
+  "emergencyNotice": "ਮਹੱਤਵਪੂਰਨ ਨੋਟਿਸ",
+  "cannotEatWarning": "ਜੇ ਤੁਸੀਂ ਖਾ ਜਾਂ ਪੀ ਨਹੀਂ ਸਕਦੇ, ਤਾਂ ਕਿਰਪਾ ਕਰਕੇ ਤੁਰੰਤ ਆਪਣੇ ਸਿਹਤ ਸੇਵਾ ਪ੍ਰਦਾਤਾ ਨਾਲ ਸੰਪਰਕ ਕਰੋ।",
+  "emergencyContacts": "ਐਮਰਜੈਂਸੀ ਸੰਪਰਕ:",
+  "nationalHelpline": "ਰਾਸ਼ਟਰੀ ਕੈਂਸਰ ਹੈਲਪਲਾਈਨ: 1800-11-4455",
+  "localER": "ਸਥਾਨਕ ਐਮਰਜੈਂਸੀ: 108",
+  "continueAnyway": "ਫਿਰ ਵੀ ਜਾਰੀ ਰੱਖੋ",
+  "appTitle": "OncoNutri+"
 }
