--- a/frontend/lib/l10n/app_ta.arb
+++ b/frontend/lib/l10n/app_ta.arb
@@ -201,5 +201,63 @@
   "notStarted": "தொடங்கவில்லை",
   "recommendedForYou": "உங்களுக்காக பரிந்துரைக்கப்பட்டது",
   "unableToLoadDashboard": "டேஷ்போர்டை ஏற்ற முடியவில்லை",
-  "pleaseTryAgain": "தயவுசெய்து மீண்டும் முயற்சிக்கவும்"
+  "pleaseTryAgain": "தயவுசெய்து மீண்டும் முயற்சிக்கவும்",
+  "heightWeightQuestion": "உங்கள் உயரமும் எடையும் என்ன?",
+  "height": "உயரம்",
+  "weight": "எடை",
+  "heightInCm": "உயரம் (செ.மீ)",
+  "weightInKg": "எடை (கிலோ)",
+  "bmiAlert": "உங்கள் BMI",
+  "underweight": "குறைவான எடை",
+  "normal": "சாதாரணம்",
+  "overweight": "அதிக எடை",
+  "obese": "உடல் பருமன்",
+  "bmiWarningTitle": "BMI எச்சரிக்கை",
+  "bmiWarningMessage": "உங்கள் BMI ஆரோக்கியமான வரம்பிற்கு வெளியே உள்ளது. சரியான ஆலோசனைக்கு உங்கள் சுகாதார வழங்குநரை அணுகவும்.",
+  "bladderCancer": "சிறுநீர்ப்பை புற்றுநோய்",
+  "thyroidCancer": "தைராய்டு புற்றுநோய்",
+  "skinCancer": "தோல் புற்றுநோய்",
+  "bloodCancer": "இரத்த புற்றுநோய்",
+  "understood": "புரிந்துகொண்டேன்",
+  "nausea": "குமட்டல்",
+  "vomiting": "வாந்தி",
+  "diarrhea": "வயிற்றுப்போக்கு",
+  "constipation": "மலச்சிக்கல்",
+  "fatigue": "சோர்வு",
+  "lossOfAppetite": "பசியின்மை",
+  "dairy": "பால் பொருட்கள்",
+  "dairySubtitle": "பால், சீஸ், தயிர்",
+  "gluten": "குளூட்டன்",
+  "glutenSubtitle": "கோதுமை, பார்லி, கம்பு",
+  "nuts": "கொட்டைகள்",
+  "nutsSubtitle": "வேர்க்கடலை, பாதாம், வால்நட்",
+  "soy": "சோயா",
+  "soySubtitle": "டோஃபு, சோயா பால், எடமேம்",
+  "eggs": "முட்டைகள்",
+  "eggsSubtitle": "கோழி முட்டை, வாத்து முட்டை",
+  "seafood": "கடல் உணவு",
+  "seafoodSubtitle": "மீன், இறால், நண்டு",
+  "redMeat": "சிவப்பு இறைச்சி",
+  "redMeatSubtitle": "மாட்டிறைச்சி, பன்றி இறைச்சி, ஆட்டிறைச்சி",
+  "poultry": "கோழி இறைச்சி",
+  "poultrySubtitle": "கோழி, வான்கோழி",
+  "eatingAbilityQuestion": "உங்களால் சாப்பிடும் திறன் எப்படி உள்ளது?",
+  "eatingAbilitySubtitle": "இது எங்களுக்கு பகுதி அளவுகள் மற்றும் உணவு அமைப்பை சரிசெய்ய உதவுகிறது",
+  "normalEating": "சாதாரணம்",
+  "normalEatingDesc": "வழக்கமான உணவை சாப்பிட முடியும்",
+  "reducedEating": "குறைவான",
+  "reducedEatingDesc": "சிறிய பகுதிகள் சாப்பிடுகிறேன்",
+  "softFoodsOnly": "மென்மையான உணவுகள் மட்டும்",
+  "softFoodsOnlyDesc": "திட உணவுகளில் சிரமம்",
+  "liquidsOnly": "திரவங்கள் மட்டும்",
+  "liquidsOnlyDesc": "திரவங்களை மட்டுமே எடுத்துக் கொள்ள முடியும்",
+  "cannotEat": "சாப்பிட முடியாது",
+  "cannotEatDesc": "சாப்பிட அல்லது குடிக்க முடியாது",
+  "emergencyNotice": "முக்கியமான அறிவிப்பு",
+  "cannotEatWarning": "நீங்கள் சாப்பிட அல்லது குடிக்க முடியாவிட்டால், உடனடியாக உங்கள் சுகாதார வழங்குநரை தொடர்பு கொள்ளவும்.",
+  "emergencyContacts": "அவசர தொடர்புகள்:",
+  "nationalHelpline": "தேசிய புற்றுநோய் உதவி எண்: 1800-11-4455",
+  "localER": "உள்ளூர் அவசரம்: 108",
+  "continueAnyway": "எப்படியும் தொடரவும்",
+  "appTitle": "OncoNutri+"
 }
