--- a/frontend/lib/l10n/app_te.arb
+++ b/frontend/lib/l10n/app_te.arb
@@ -201,5 +201,63 @@
   "notStarted": "ప్రారంభించలేదు",
   "recommendedForYou": "మీ కోసం సిఫార్సు చేయబడింది",
   "unableToLoadDashboard": "డ్యాష్‌బోర్డ్ లోడ్ చేయడం సాధ్యం కాలేదు",
-  "pleaseTryAgain": "దయచేసి మళ్లీ ప్రయత్నించండి"
+  "pleaseTryAgain": "దయచేసి మళ్లీ ప్రయత్నించండి",
+  "heightWeightQuestion": "మీ ఎత్తు మరియు బరువు ఎంత?",
+  "height": "ఎత్తు",
+  "weight": "బరువు",
+  "heightInCm": "ఎత్తు (సెం.మీ)",
+  "weightInKg": "బరువు (కిలోలు)",
+  "bmiAlert": "మీ BMI",
+  "underweight": "తక్కువ బరువు",
+  "normal": "సాధారణం",
+  "overweight": "అధిక బరువు",
+  "obese": "స్థూలకాయం",
+  "bmiWarningTitle": "BMI హెచ్చరిక",
+  "bmiWarningMessage": "మీ BMI ఆరోగ్యకరమైన పరిధి వెలుపల ఉంది. సరైన సలహా కోసం మీ ఆరోగ్య సంరక్షణ ప్రదాతను సంప్రదించండి.",
+  "bladderCancer": "మూత్రాశయ క్యాన్సర్",
+  "thyroidCancer": "థైరాయిడ్ క్యాన్సర్",
+  "skinCancer": "చర్మ క్యాన్సర్",
+  "bloodCancer": "రక్త క్యాన్సర్",
+  "understood": "అర్థమైంది",
+  "nausea": "వాంతి అనుభూతి",
+  "vomiting": "వాంతి",
+  "diarrhea": "విరేచనాలు",
+  "constipation": "మలబద్ధకం",
+  "fatigue": "అలసట",
+  "lossOfAppetite": "ఆకలి తగ్గడం",
+  "dairy": "పాల ఉత్పత్తులు",
+  "dairySubtitle": "పాలు, చీజ్, పెరుగు",
+  "gluten": "గ్లూటెన్",
+  "glutenSubtitle": "గోధుమ, బార్లీ, రై",
+  "nuts": "గింజలు",
+  "nutsSubtitle": "వేరుశెనగ, బాదం, వాల్‌నట్",
+  "soy": "సోయా",
+  "soySubtitle": "టోఫు, సోయా మిల్క్, ఎడమామే",
+  "eggs": "గుడ్లు",
+  "eggsSubtitle": "కోడి గుడ్లు, బాతు గుడ్లు",
+  "seafood": "సముద్ర ఆహారం",
+  "seafoodSubtitle": "చేపలు, రొయ్యలు, పీత",
+  "redMeat": "ఎర్ర మాంసం",
+  "redMeatSubtitle": "గొడ్డు మాంసం, పంది మాంసం, గొర్రె మాంసం",
+  "poultry": "కోడి మాంసం",
+  "poultrySubtitle": "చికెన్, టర్కీ",
+  "eatingAbilityQuestion": "మీ తినే సామర్థ్యం ఎలా ఉంది?",
+  "eatingAbilitySubtitle": "భాగ పరిమాణాలు మరియు ఆహార నిర్మాణాలను సర్దుబాటు చేయడానికి ఇది మాకు సహాయపడుతుంది",
+  "normalEating": "సాధారణం",
+  "normalEatingDesc": "సాధారణ ఆహారాన్ని తినగలను",
+  "reducedEating": "తగ్గింది",
+  "reducedEatingDesc": "చిన్న భాగాలు తింటున్నాను",
+  "softFoodsOnly": "మృదువైన ఆహారాలు మాత్రమే",
+  "softFoodsOnlyDesc": "గట్టి ఆహారాలతో ఇబ్బంది",
+  "liquidsOnly": "ద్రవాలు మాత్రమే",
+  "liquidsOnlyDesc": "ద్రవాలను మాత్రమే తీసుకోగలను",
+  "cannotEat": "తినలేను",
+  "cannotEatDesc": "తినడం లేదా త్రాగడం సాధ్యం కాదు",
+  "emergencyNotice": "ముఖ్యమైన నోటీసు",
+  "cannotEatWarning": "మీరు తినలేకపోతే లేదా త్రాగలేకపోతే, దయచేసి వెంటనే మీ ఆరోగ్య సంరక్షణ ప్రదాతను సంప్రదించండి.",
+  "emergencyContacts": "అత్యవసర పరిచయాలు:",
+  "nationalHelpline": "జాతీయ క్యాన్సర్ హెల్ప్‌లైన్: 1800-11-4455",
+  "localER": "స్థానిక అత్యవసరం: 108",
+  "continueAnyway": "ఏదేమైనా కొనసాగించు",
+  "appTitle": "OncoNutri+"
 }
